--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,25 +1,24 @@
-#nav-bar{
-height: 120px;
-width: 100%;
-background-color: #4056A1;
-color: #FFFFFF;
-padding-left: 1.5em;
-padding-right: 1.5em;
-display: flex;
-justify-content: space-between;
-align-items: center;
-/* position: fixed; */
-top: 0;
+#nav-bar {
+  height: 120px;
+  width: 100%;
+  background-color: #4056a1;
+  color: #ffffff;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* position: fixed; */
+  top: 0;
 }
 
-.header{
-    font-family: 'Bungee';
-    font-size: 42px;
+.header {
+  font-family: "Bungee";
+  font-size: 42px;
 }
 
-.arrows{
-display: flex;
-justify-content: center;
-color: red;
+.arrows {
+  display: flex;
+  justify-content: center;
+  color: red;
 }
-
