--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,38 +1,38 @@
-form{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.tweet-button{
-    display: flex;
-    justify-content: space-between;
+.tweet-button {
+  display: flex;
+  justify-content: space-between;
 }
 
 textarea {
-    border: none;
-    background-color: #eee;
-    border-bottom: 3px solid black;
-    margin: 10px 5px;
+  border: none;
+  background-color: #eee;
+  border-bottom: 3px solid black;
+  margin: 10px 5px;
 }
 
-.button{
-    border: none;
-    background-color: blue;
-    color: white;
-    font-family: 'Bungee';
+.button {
+  border: none;
+  background-color: blue;
+  color: white;
+  font-family: "Bungee";
 }
 
 .counter {
-    font-family: 'Bungee';
+  font-family: "Bungee";
 }
 
-.label{
-    font-family: "Source Sans Pro";
-    color: black;
+.label {
+  font-family: "Source Sans Pro";
+  color: black;
 }
 
-.error{
-    border: 3px solid red;
-    font-family: 'Bungee';
+.error {
+  border: 3px solid red;
+  font-family: "Bungee";
 }
